--- a/public/css/Style.css
+++ b/public/css/Style.css
@@ -1148,7 +1148,7 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
-    margin-bottom: 2rem;
+    /* padding-bottom: 2rem; */
 }
 
 @media (min-width: 768px) {
